<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cobalt.android.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shorts"
        android:name="com.cobalt.android.ui.shorts.ShortsFragment"
        android:label="@string/nav_shorts"
        tools:layout="@layout/fragment_shorts" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.cobalt.android.ui.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>